# SlovenianLemmatizer

./: .gitignore  .hgtags  .travis.yml  CMakeLists.txt  Makefile  README  README.md  pom.xml
.github/workflows/: ccpp.yml  codeql-analysis.yml
bindings/java/headers/: sl_lemmatizer_java.cpp  sl_lemmatizer_java.h
bindings/python/: MANIFEST.in  README  setup.py  sllematizer.py  src  win_init.cpp
bindings/python/lemmagen/: __init__.py  lemmatizer.py  libLemmagen.pyx
bindings/python/tests/: lemmatizer_tests.py
data/: about.txt
data/lemmatizer/: about.txt
data/multext/: about.txt
data/multext/ascii-latin1/: about-warning.txt  wfl-me-en.tbl
data/multext/ascii-latin1_lowercase/: about-warning.txt  wfl-me-en.tbl
data/multext/original/: about.txt
data/multext/unicode/: about.txt  wfl-me-en.tbl
data/rdrtree/: about.txt  rdr-me-en.txt
doc/: about.txt
include/: lemmagen.h
lemmagen/binary/linux/: lemBuild  lemLearn  lemSplit  lemStat  lemTest  lemXval  lemmagen  lemmatize
lemmagen/project/makefile/: .Makefile.swp  Makefile
lemmagen/project/visualstudio/: lemBuild.vcproj  lemLearn.vcproj  lemLib.vcproj  lemSplit.vcproj  lemStat.vcproj  lemTest.vcproj  lemXval.vcproj  lemmagen.sln  lemmagen.vcproj  lemmagenDll.vcproj  lemmatize.vcproj  lemmatizeWrapper.vcproj
lemmagen/source/definition/: RdrLexer.def  RdrParser.def
lemmagen/source/header/: BaseAlg.h  BaseNode.h  CmdLineParser.h  CoverNodeAlg.h  DebugMemory.h  JoelRdr.h  JoelTree.h  MiscLib.h  MiscLib.h~  Node.h  RdrLemmatizer.h  RdrLemmatizer.h~  RdrLexer.h  RdrParser.h  RdrRule.h  RdrScanner.h  RdrScanner.h~  RdrStatistic.h  RdrTree.h  RdrXval.h  Rule.h  Statistics.h  Word.h  WordList.h  Xval.h
lemmagen/source/interface/: InterAll.cpp  InterBuild.cpp  InterLearn.cpp  InterLemtz.cpp  InterSplit.cpp  InterStat.cpp  InterTest.cpp  InterXVal.cpp  Interface.h
lemmagen/source/main/: burek.cpp  lemBuild.cpp  lemLearn.cpp  lemSplit.cpp  lemStat.cpp  lemTest.cpp  lemXval.cpp  lemmagen.cpp  lemmatize.cpp  lemmatizeWraper.cpp
src/: RdrLemmatizer.cpp  RdrLemmatizer.h  lemmagen.cpp  lemmatizer.cpp  lemmatizer.h  main.c  sl_lemmatizer.cpp  sl_lemmatizer.h
test/: lemmagen.cpp
(+33 files in other folders)
